--- a/src/app/modules/developer/Components/booking/booking.component.html
+++ b/src/app/modules/developer/Components/booking/booking.component.html
@@ -51,16 +51,16 @@
                 <div class="col-xl-4 col-12">
 
                     <section class="mounth" id="january">
-                        <main>
+                        <!-- <main>
                             <h1>JANUARY 2025</h1>
                             <nav role='padigation'>
                                 <span></span>
                                 <span></span>
                             </nav>
-                        </main>
+                        </main> -->
 
                         <article>
-                            <div class="days">
+                            <!-- <div class="days">
                                 <b>SU</b>
                                 <b>MO</b>
                                 <b>TU</b>
@@ -115,26 +115,49 @@
                                 <span class="disable">8</span>
                                 <span class="disable">9</span>
                             </div>
+ -->
+
+                            <div class="wrapper">
+                                <!-- <div class="container-calendar"> -->
+                                    <div id="left">
+                                        <!-- <h1>Dynamic Calendar</h1> -->
+                                        <div id="event-section" >
+                                            <h3>Select Date</h3>
+                                            <input type="date" id="eventDate" class="d-flex">
+                                            <!-- <input type="text"
+                                                id="eventTitle"
+                                                placeholder="Event Title"> -->
+                                            <!-- <input type="text"
+                                                id="eventDescription"
+                                                placeholder="Event Description"> -->
+                                            <button id="addEvent" class="btn btn-primary btn-block" click="addEvent()">
+                                                Add
+                                            </button>
+                                     
+                                        </div>
+                                    </div> 
+                                </div>
 
 
+                                <div class="card border-success mb-2    col-12">
+                                    <div class="card-header bg-transparent border-success ">Now select time</div>
+                                    <div class="card-body text-success">
+                
+                                    </div>
+                                    <div class="time-row row row-cols-3">
+                
+                                        @for (item of list; track $index) {
+                                        <div class="time-option col-3">from: {{item.from}} to:{{item.to}}</div>
+                
+                                        }
+                
+                                    </div>
+                                </div>
+                                <button class="btn btn-primary btn-block mt-0">Continue</button>
                         </article>
                     </section>
                 </div>
-                <div class="card border-success mb-3    col-12">
-                    <div class="card-header bg-transparent border-success ">Now select time</div>
-                    <div class="card-body text-success">
-
-                    </div>
-                    <div class="time-row row row-cols-3">
-
-                        @for (item of list; track $index) {
-                        <div class="time-option col-3">from: {{item.from}} to:{{item.to}}</div>
-
-                        }
-
-                    </div>
-                </div>
-                <button class="btn btn-primary btn-block mt-4">Continue</button>
+               
             </div>
 
 
@@ -149,6 +172,60 @@
 
 
 
-
-
-
+            <!-- <div id="reminder-section">
+                <h3>Reminders</h3>
+                List to display reminders
+                <ul id="reminderList">
+                    <li data-event-id="1">
+                        <strong>Event Title</strong>
+                        - Event Description on Event Date
+                        <button class="delete-event"
+                            onclick="deleteEvent(1)">
+                            Delete
+                        </button>
+                    </li>
+                </ul>
+            </div> -->
+        <!-- </div> -->
+        <!-- <div id="right">
+            <h3 id="monthAndYear"></h3>
+            <div class="button-container-calendar">
+                <button id="previous"
+                        onclick="previous()">
+                    ‹
+                </button>
+                <button id="next"
+                        onclick="next()">
+                    ›
+                </button>
+            </div>
+            <table class="table-calendar"
+                id="calendar"
+                data-lang="en">
+                <thead id="thead-month"></thead>
+                Table body for displaying the calendar
+                <tbody id="calendar-body"></tbody>
+            </table>
+            <div class="footer-container-calendar">
+                <label for="month">Jump To: </label>
+                Dropdowns to select a specific month and year
+                <select id="month" onchange="jump()">
+                    <option value=0>Jan</option>
+                    <option value=1>Feb</option>
+                    <option value=2>Mar</option>
+                    <option value=3>Apr</option>
+                    <option value=4>May</option>
+                    <option value=5>Jun</option>
+                    <option value=6>Jul</option>
+                    <option value=7>Aug</option>
+                    <option value=8>Sep</option>
+                    <option value=9>Oct</option>
+                    <option value=10>Nov</option>
+                    <option value=11>Dec</option>
+                </select>
+                Dropdown to select a specific year
+                <select id="year" onchange="jump()"></select>
+            </div>
+        </div> -->
+    <!-- </div> -->
+<!-- </div> -->
