--- a/src/app/modules/developer/Components/profile-layout/profile-layout.component.html
+++ b/src/app/modules/developer/Components/profile-layout/profile-layout.component.html
@@ -2,14 +2,7 @@
     <div class="row">
       <!-- Sidebar -->
       <div class="col-2">
-        <div class="sidebar">
-          <!-- Sidebar content goes here -->
-          <ul>
-            <li><a routerLink="updateprofile">Update Profile</a></li>
-            <li><a routerLink="/path2">Link 2</a></li>
-            <li><a routerLink="/path3">Link 3</a></li>
-          </ul>
-        </div>
+        <app-profile-side-bar></app-profile-side-bar>
       </div>
   
       <!-- Main Content -->
