--- a/src/app/modules/developer/Components/reviews-list/reviews-list.component.html
+++ b/src/app/modules/developer/Components/reviews-list/reviews-list.component.html
@@ -1,13 +1,10 @@
-<br>
-<br>
-<br>
+<h2 class="mt-5 ms-3">Reviews From Mentors</h2>
 <div class="container">
-
-  <div class="row">
-    <div class="col-4">
+  <!-- <div class="row"> -->
+    <!-- <div class="col-4">
       <app-profile-side-bar></app-profile-side-bar>
-    </div>
-    <div class="col-8">
+    </div> -->
+    <!-- <div class="col-"> -->
       <div class="row">
         <div class="col-4">
           <div class="left-card">
@@ -21,7 +18,7 @@
             </div>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-7">
           <div class="reviews">
             <div *ngFor="let Review of Reviews">
               <app-reviews-card [review]="Review" class="review-card"></app-reviews-card>
@@ -30,5 +27,5 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
+  
+
