--- a/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
+++ b/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
@@ -10,12 +10,12 @@
                     <div class="d-flex align-items-end justify-content-between">
                         <div class="d-flex align-items-center">
                             <div class="me-2 position-relative d-flex justify-content-end align-items-end mt-n5">
-                                <img src="05 (1).jpg" class="avatar-xl rounded-circle border border-4 border-white"
+                                <img src="66b372a33d0f5.webp" class="avatar-xl rounded-circle border border-4 border-white"
                                     style="height: 110px; size: 10px;" alt="avatar">
                             </div>
                             <div class="lh-1">
                                 <h2 class="mb-0">
-                                    Stella Flores
+                                    Harshad Sawant
                                     <a href="#" data-bs-toggle="tooltip" data-placement="top" aria-label="Beginner"
                                         data-bs-original-title="Beginner">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
@@ -26,7 +26,7 @@
                                         </svg>
                                     </a>
                                 </h2>
-                                <p class="mb-0 d-block">stellaflores</p>
+                                <p class="mb-0 d-block">HarshadSawant</p>
                             </div>
                         </div>
                         <div>
@@ -119,7 +119,7 @@
                                         Delete Profile
                                     </a>
                                 </li>
-                                  <!-- Nav item -->
+                                <!-- Nav item -->
                                 <li class="nav-item">
                                     <a class="nav-link" href="">
                                         <i class="fa-solid fa-right-from-bracket"></i>
@@ -142,13 +142,12 @@
 
                     <div id="ps-0 mb-5">
                         <div class="comment pe-5 ps-2 pt-2 ">
-                            <img src="66b372a33d0f5.webp"
-                                class="avatar-xl rounded-circle border border-4 border-white"
+                            <img src="05 (1).jpg" class="avatar-xl rounded-circle border border-4 border-white"
                                 style="height: 70px; size: 6px;" alt="avatar">
-                         
+
                             <div class="comment-content">
 
-                                <p class="mt-2"><strong>Harshad Sawant </strong>
+                                <p class="mt-2"><strong> Stella Flores </strong>
                                     Career Development | Career Growth | Leadership | Career Coaching |
                                     Career Advice </p>
 
@@ -158,58 +157,43 @@
                     </div>
 
                     <div class="card-header d-lg-flex justify-content-between align-items-center mt-4">
-                        
+
                         <div class="mb-3 mb-lg-0">
- 
-                            <h3 class="mb-0">Answers</h3>
-                          
+
+                            <h3 class="mb-0">Queries</h3>
+
                         </div>
-                   
+
                     </div>
                     <!-- Card body -->
                     <div class="card-body">
                         <div class="border-bottom pt-0 pb-0">
-                           
+
 
                             <div class=" ">
-                                <div class=" mb-2 mb-lg-0  pb-3 gap-0 ">
-                                    <span class=" ">Answered On : </span>
+                                <div class=" mb-2 mb-lg-0  mt-2 pb-2 gap-0 ">
+                                    <span class=" ">Asked On : </span>
                                     <span class="mb-0 ">Oct 1, 2020</span>
                                 </div>
-                              
-                                        <div id="ps-0 ">
-                                            <div class="answer pe-5 ps-2 pt-2 mb-3 ">
-                                                <div class="comment-content">
-        
-                                                    <div class="comment-actions">
-        
-                                                        <div class="mt-3 me-5 ">
-                                                            <p><strong class="ms-2">Your Query : </strong> Lorem ipsum dolor, sit amet consectetur
-                                                                adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
-                                                                </p>
-                                                      
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+
                           
+
                                 <div id="ps-0">
-                                    <div class="answer pe-5 ps-2 pt-2 ">
+                                    <div class="answer pe-5 ps-2 pt-0 mb-3  ">
                                         <div class="comment-content">
 
                                             <div class="comment-actions">
 
                                                 <div class="mt-3 me-5 ms-2">
-                                                    <p class="ms-2"><strong class="">Ansewr : </strong> Lorem ipsum dolor, sit amet consectetur
+                                                    <p class="ms-2"><strong class="">Query : </strong> Lorem ipsum
+                                                        dolor, sit amet consectetur
                                                         adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
-                                                           out.</p>
-                                                   
-                                                        <button class="btn btn-outline-primary btn-sm ms-0  "
-                                                            style="border-radius: 25px;"
-                                                            (click)="downloadFile()">Download
-                                                            File</button>
-                                               
+                                                        out.</p>
+
+                                                    <button class="btn btn-outline-primary btn-sm ms-0  "
+                                                        style="border-radius: 25px;" (click)="downloadFile()">Download
+                                                        File</button>
+
                                                 </div>
                                             </div>
 
@@ -219,10 +203,36 @@
                                     </div>
 
                                 </div>
+                                <div class=" mb-0 mb-lg-0  mt-4 pb-2 gap-0 ">
+                                    <span class=" ">Aswered On : </span>
+                                    <span class="mb-0 ">Oct 1, 2020</span>
+                                </div>
+
+                                <div id="ps-0 ">
+                                    <div class="answer pe-5 ps-2 pt-2">
+                                        <div class="comment-content">
+
+                                            <div class="comment-actions">
+
+                                                <div class="mt-0 me-5 ">
+                                                    <p><strong class="ms-3"> Your Answer : </strong> Lorem ipsum dolor,
+                                                        sit amet consectetur
+                                                        adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
+                                                    </p>
+                                                    <button class="btn btn-outline-primary btn-sm ms-0  "
+                                                    style="border-radius: 25px;" (click)="downloadFile()">Download
+                                                    File</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
                                 <div>
-                                    <h5 class="mt-4">Ask your query*</h5>
-                                    <p class=" text-muted">You can also edit this once payment is done</p>
-                                    <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query"
+                                    <h5 class="mt-4">Enter your answer*</h5>
+                                    <!-- <p class=" text-muted">You can also edit this once payment is done</p> -->
+                                    <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Answer Query"
                                         required></textarea>
 
 
@@ -241,7 +251,8 @@
                                     </div>
 
 
-                                    <button class=" mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0 ">Send</button>
+                                    <button
+                                        class=" mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0 ">Send</button>
                                 </div>
                             </div>
 
@@ -253,7 +264,3 @@
 
     </div>
 </section>
-
-
-
-
