--- a/src/app/modules/developer/Components/mentor-profile/mentor-profile.component.html
+++ b/src/app/modules/developer/Components/mentor-profile/mentor-profile.component.html
@@ -20,13 +20,13 @@
     <div class="col-md-3">
       <div class="text-center mb-4">
         <div class="d-grid gap-3">
-          <a [routerLink]="'/developer/hr'" class="btn btn-custom">
+          <a [routerLink]="'/developer/mentors'" class="btn btn-custom">
             <i class="fas fa-arrow-left"></i> Back to List
           </a>
-          <a class="btn btn-success">
+          <a class="btn btn-success" [routerLink]="'/developer/booking'">
             <i class="fas fa-calendar-check"></i> Book Session
           </a>
-          <a class="btn btn-primary">
+          <a class="btn btn-primary" [routerLink]="'/developer/query'">
             <i class="fas fa-question-circle"></i> Ask Question
           </a>
         </div>
