--- a/src/app/modules/developer/Components/mentor-reply/mentor-reply.component.html
+++ b/src/app/modules/developer/Components/mentor-reply/mentor-reply.component.html
@@ -178,7 +178,7 @@
                     </div> -->
                 </div>
                 <div class="col-lg-3 col-md-12 col-12 d-lg-flex align-items-start justify-content-end">
-                  <a href="#" class="btn btn-outline-primary btn-sm " style="border-radius: 25px;">Go To Answer</a>
+                  <a routerLink="/developer/profile/answer-query" class="btn btn-outline-primary btn-sm " style="border-radius: 25px;">Go To Answer</a>
                 </div>
               </div>
               <!-- Pricing data -->
@@ -227,7 +227,7 @@
                   </div>
 
                   <!-- <div class="col-auto">
-                    
+
                     <a href="#" class="btn btn-light btn-sm disabled">Pendding</a>
                   </div> -->
                 </div>
@@ -244,12 +244,12 @@
                     <span class="me-2 position-relative mt-5 justify-content-end align-items-end mt-n5 col-lg-3 col-12">
                       <img src="66b372a33d0f5.webp" class="avatar-xl rounded-circle border border-4 border-white" style="height: 110px; size: 10px;" alt="avatar">
                     </span>
-                   
+
                     <span class="d-block col-lg-8 col-12 mt-4 mb-0 ">
                       <span class="h4">Harshad Sawant</span>
                       <span class="badge bg-danger ms-2">No Answer yet</span>
                     </span>
-                    
+
                     </div> -->
                 <!-- <div class="col mb-2 mb-lg-0">
                     <span class="d-block">
@@ -260,7 +260,7 @@
                   </div> -->
 
                 <!-- <div class="col-auto">
-                    
+
                     <a href="#" class="btn btn-light btn-sm disabled">Pendding</a>
                   </div> -->
               </div>
