--- a/src/app/modules/developer/Components/payment/payment.component.html
+++ b/src/app/modules/developer/Components/payment/payment.component.html
@@ -61,7 +61,7 @@
             </p>
           </div>
           <div class="text-center">
-            <button class="btn btn-success btn-block mt-4 w-50">
+            <button class="btn btn-success btn-block mt-4 w-50" [routerLink]="'/developer/confirmation'">
               Proceed with Payment
             </button>
           </div>
