--- a/src/app/modules/developer/Components/hr-profile/hr-profile.component.html
+++ b/src/app/modules/developer/Components/hr-profile/hr-profile.component.html
@@ -23,10 +23,10 @@
           <a [routerLink]="'/developer/hr'" class="btn btn-custom">
             <i class="fas fa-arrow-left"></i> Back to List
           </a>
-          <a class="btn btn-success">
+          <a class="btn btn-success" [routerLink]="'/developer/booking'">
             <i class="fas fa-calendar-check"></i> Book Session
           </a>
-          <a class="btn btn-primary">
+          <a class="btn btn-primary" [routerLink]="'/developer/query'">
             <i class="fas fa-question-circle"></i> Ask Question
           </a>
         </div>
