--- a/src/app/modules/developer/Components/query-answer/query-answer.component.html
+++ b/src/app/modules/developer/Components/query-answer/query-answer.component.html
@@ -145,7 +145,7 @@
                             <img src="66b372a33d0f5.webp"
                                 class="avatar-xl rounded-circle border border-4 border-white"
                                 style="height: 70px; size: 6px;" alt="avatar">
-                         
+
                             <div class="comment-content">
 
                                 <p class="mt-2"><strong>Harshad Sawant </strong>
@@ -158,42 +158,42 @@
                     </div>
 
                     <div class="card-header d-lg-flex justify-content-between align-items-center mt-4">
-                        
+
                         <div class="mb-3 mb-lg-0">
- 
+
                             <h3 class="mb-0">Answers</h3>
-                          
+
                         </div>
-                   
+
                     </div>
                     <!-- Card body -->
                     <div class="card-body">
                         <div class="border-bottom pt-0 pb-0">
-                           
+
 
                             <div class=" ">
                                 <div class=" mb-2 mb-lg-0  pb-3 gap-0 ">
                                     <span class=" ">Answered On : </span>
                                     <span class="mb-0 ">Oct 1, 2020</span>
                                 </div>
-                              
+
                                         <div id="ps-0 ">
                                             <div class="answer pe-5 ps-2 pt-2 mb-3 ">
                                                 <div class="comment-content">
-        
+
                                                     <div class="comment-actions">
-        
+
                                                         <div class="mt-3 me-5 ">
                                                             <p><strong class="ms-2">Your Query : </strong> Lorem ipsum dolor, sit amet consectetur
                                                                 adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
                                                                 </p>
-                                                      
+
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                          
+
                                 <div id="ps-0">
                                     <div class="answer pe-5 ps-2 pt-2 ">
                                         <div class="comment-content">
@@ -204,12 +204,12 @@
                                                     <p class="ms-2"><strong class="">Ansewr : </strong> Lorem ipsum dolor, sit amet consectetur
                                                         adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
                                                            out.</p>
-                                                   
+
                                                         <button class="btn btn-outline-primary btn-sm ms-0  "
                                                             style="border-radius: 25px;"
                                                             (click)="downloadFile()">Download
                                                             File</button>
-                                               
+
                                                 </div>
                                             </div>
 
@@ -239,9 +239,7 @@
                                             <p class="upload-text">Click here to upload File</p>
                                         </label>
                                     </div>
-
-
-                                    <button class=" mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0 ">Send</button>
+                                    <a class="mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0" >Send</a>
                                 </div>
                             </div>
 
