--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -4,12 +4,12 @@
         <h3 class="ms-2">Harshad Sawant</h3>
     </div>
     <div class=" row ">
-    
+
         <div class="col-xl-7 col-12">
 
             <!-- Main Card -->
             <div class="card p-5" style="border-radius: 15px;">
-                
+
                 <!-- Header with Background -->
                 <div style=" border-radius: 15px 15px 0 0; padding: 20px;">
                     <div class="d-flex align-items-center">
@@ -31,12 +31,12 @@
                         </div>
                       </div>
                 </div>
-            
-          
+
+
                 <!-- Footer with Profile -->
                 <hr>
                 <div class="d-flex align-items-center mt-1 p-1">
-                    
+
                     <img src="66b372a33d0f5.webp" alt="Harshad Sawant" class="rounded-circle mr-3" width="60">
                     <div class="p-3">
                         <h6>Harshad Sawant</h6>
@@ -53,17 +53,17 @@
 
 
             <div class="col-xl-4 col-12 justify-content-center">
-             
+
                 <div class="card border mt-2 mb-3" style="max-width: 25rem; height: 85%">
                     <p class="text-muted ms-2 mt-3" style=""> Step 1/1</p>
                     <div class="card-header bg-transparent border-success " style="font-weight: bold;">Query submission</div>
                     <div class="card-body text-black">
                        <h5 class="card-title">Ask your query*</h5>
                       <p class="card-text text-muted">You can also edit this once payment is done</p>
-                      <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query" required></textarea> 
-                     
+                      <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query" required></textarea>
 
-                      
+
+
                       <h5 class="card-title mt-3">Attach file</h5>
                       <p class="card-text text-muted">Accepted file types are pdf, doc. It should not be more than 50 MB.</p>
                       <!-- <form action="" [(ngModel)]="querymessage">
@@ -71,12 +71,12 @@
                       </form> -->
                       <div class="upload-container border p-3 text-center">
                         <input type="file" id="file-upload" class="upload-input" (change)="onFileSelected($event)">
-                        
+
                         <label for="file-upload" class="upload-label">
                         <i class="fa-solid fa-cloud-arrow-up"></i>
                           <p class="upload-text">Click here to upload File</p>
                         </label>
-                        
+
                         <!-- <p class="upload-note">Accepted file types are pdf, doc. It should not be more than 50 MB.</p>
                          -->
                         <!-- <div *ngIf="selectedFile">
@@ -84,15 +84,15 @@
                         </div> -->
                       </div>
                     </div>
-                   
-                        <button class="btn btn-primary btn-block mt- p-2" >Send</button></div>
-                 
+
+                        <button class="btn btn-primary btn-block mt- p-2" >Send</button>
+                    </div>
+
                 </div>
             </div>
 
-       
-        
+
+
     </div>
 
 
-    
