editing mentor reply

--- a/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
+++ b/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
@@ -1,140 +1,21 @@
 <section class="pt-5 pb-5 ">
     <div class="container">
         <!-- User info -->
-        <div class="row align-items-center">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-12">
-                <!-- Bg -->
-                <div class="rounded-top"
-                    style="background: url(profile-bg.jpg) no-repeat; background-size: cover; height: 100px"></div>
-                <div class="card px-4 pt-2 pb-1 shadow-sm rounded-top-0 rounded-bottom-4 rounded-bottom-md-2">
-                    <div class="d-flex align-items-end justify-content-between">
-                        <div class="d-flex align-items-center">
-                            <div class="me-2 position-relative d-flex justify-content-end align-items-end mt-n5">
-                                <img src="66b372a33d0f5.webp" class="avatar-xl rounded-circle border border-4 border-white"
-                                    style="height: 110px; size: 10px;" alt="avatar">
-                            </div>
-                            <div class="lh-1">
-                                <h2 class="mb-0">
-                                    Harshad Sawant
-                                    <a href="#" data-bs-toggle="tooltip" data-placement="top" aria-label="Beginner"
-                                        data-bs-original-title="Beginner">
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="3" y="8" width="2" height="6" rx="1" fill="#754FFE"></rect>
-                                            <rect x="7" y="5" width="2" height="9" rx="1" fill="#DBD8E9"></rect>
-                                            <rect x="11" y="2" width="2" height="12" rx="1" fill="#DBD8E9"></rect>
-                                        </svg>
-                                    </a>
-                                </h2>
-                                <p class="mb-0 d-block">HarshadSawant</p>
-                            </div>
-                        </div>
-                        <div>
-                            <a href="" class="btn btn-outline-primary btn-sm mb-3 p-0 ms-2 btn-account p-2">Account
-                                Setting</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="align-items-center">
+          
         </div>
 
         <!-- Content -->
 
-        <div class="row mt-0 mt-md-4 ">
-            <div class="col-lg-3 col-md-4 col-12">
+        <div class="mt-0 mt-md-4  ">
+            <div class=" ">
                 <!-- Side navbar -->
-                <nav class="navbar navbar-expand-md shadow  mb-4 mb-lg-0 sidenav">
-                    <!-- Menu -->
-                    <a class="d-xl-none d-lg-none d-md-none text-inherit fw-bold" href="#">Menu</a>
-                    <!-- Button -->
-                    <button class="navbar-toggler d-md-none icon-shape icon-sm rounded bg-primary text-light"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#sidenav" aria-controls="sidenav"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="fe fe-menu"></span>
-                    </button>
-                    <!-- Collapse navbar -->
-                    <div class="collapse navbar-collapse" id="sidenav" style="box-shadow: 50px !important; ">
-                        <div class="navbar-nav flex-column">
-                            <span class="navbar-header fw-bold">Questions</span>
-                            <ul class="list-unstyled ms-n2 mb-4">
-                                <!-- Nav item -->
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-file-circle-question"></i>
-                                        My queres
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-rotate-left"></i>
-                                        My Quiz Attempt
-                                    </a>
-                                </li>
-                            </ul>
-                            <!-- Navbar header -->
-                            <span class="navbar-header fw-bold">Account Settings</span>
-                            <ul class="list-unstyled ms-n2 mb-0">
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-pen-to-square"></i>
-                                        Edit Profile
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-lock"></i>
-                                        Security
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-user"></i>
-                                        Social Profiles
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-bell"></i>
-                                        Notifications
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-user-lock"></i>
-                                        Profile Privacy
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-trash-can"></i>
-                                        Delete Profile
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-right-from-bracket"></i>
-                                        Sign Out
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+                
             </div>
 
 
 
-            <div class="col-lg-9 col-md-8 col-12">
+            <div class="">
                 <!-- Card -->
                 <div class="card border-0">
                     <!-- Card header -->
@@ -232,10 +113,11 @@
                                 <div>
                                     <h5 class="mt-4">Enter your answer*</h5>
                                     <!-- <p class=" text-muted">You can also edit this once payment is done</p> -->
-                                    <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Answer Query"
-                                        required></textarea>
+                                     <form [formGroup]="form" (ngSubmit)="send()"> 
+                                    <textarea  FormControlName="query" class="form-control mb-3 p-4" id="validationTextarea" placeholder="Answer Query"
+                                        ></textarea>
 
-
+  
 
                                     <h5 class=" mt-3">Attach file</h5>
                                     <p class="text-muted">Accepted file types are pdf, doc. It should not be more than
@@ -251,8 +133,9 @@
                                     </div>
 
 
-                                    <button
-                                        class=" mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0 ">Send</button>
+                                    <button type="submit"
+                                        class=" mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0 " >Send</button>
+                                    </form>
                                 </div>
                             </div>
 
