--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -14,7 +14,8 @@
                 <div style=" border-radius: 15px 15px 0 0; padding: 20px;">
                     <div class="d-flex align-items-center">
                         <span class="badge badge-pill badge-light"
-                            style="background-color: #ffe0e6; color: #ff3366; font-weight: bold;">Query<i class="bi bi-person-raised-hand"></i></span>
+                            style="background-color: #ffe0e6; color: #ff3366; font-weight: bold;">Query<i
+                                class="bi bi-person-raised-hand"></i></span>
                     </div>
                     <h5 class="mt-2">Ask a Query</h5>
                     <p class="text-muted"><i class="fa-solid fa-clock-rotate-left"></i> 48 Hrs</p>
@@ -29,7 +30,7 @@
                         <div class="card-body " style="color: #ff3366;"><i class="fa-solid fa-clock-rotate-left"></i>
                             Reverts within 48 Hrs
                         </div>
-                      </div>
+                    </div>
                 </div>
 
 
@@ -48,51 +49,56 @@
                         <a href="#" class="btn btn-light"><i class="fa-solid fa-share"></i></a>
                     </div>
                 </div>
+            </div>
+        </div>
+
+
+        <div class="col-xl-4 col-12 justify-content-center">
+
+            <div class="card border mt-2 mb-3" style="max-width: 25rem; height: 85%">
+                <p class="text-muted ms-2 mt-3" style=""> Step 1/1</p>
+                <div class="card-header bg-transparent border-success " style="font-weight: bold;">Query submission
+                </div>
+                 <!-- <form [formGroup]="form" (ngSubmit)="send()"> -->
+                    <div class="card-body text-black">
+                        <h5 class="card-title">Ask your query*</h5>
+
+                        <p class="card-text text-muted">You can also edit this once payment is done</p>
+
+                        <textarea FormControlName="query" class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query"
+                            required></textarea>
+
+
+
+                        <h5 class="card-title mt-3">Attach file</h5>
+                        <p class="card-text text-muted">Accepted file types are pdf, doc. It should not be more than 50
+                            MB.</p>
+                        <!-- <form action="" [(ngModel)]="querymessage">
+                      <textarea class="form-control p-4 " [value]="" id="validationTextarea" placeholder="Click here to upload File" required> </textarea>
+                      </form> -->
+                        <div class="upload-container border p-3 text-center">
+                            <input type="file" id="file-upload" class="upload-input" (change)="onFileSelected($event)">
+
+                            <label for="file-upload" class="upload-label">
+                                <i class="fa-solid fa-cloud-arrow-up"></i>
+                                <p class="upload-text">Click here to upload File</p>
+                            </label>
+
+                            <!-- <p class="upload-note">Accepted file types are pdf, doc. It should not be more than 50 MB.</p>
+                         -->
+                            <!-- <div *ngIf="selectedFile">
+                          <p>Selected file: {{ selectedFile }}</p>
+                        </div> -->
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary btn-block mt- p-2">Send</button>
+                
+            </div>
+           
         </div>
     </div>
 
-
-            <div class="col-xl-4 col-12 justify-content-center">
-
-                <div class="card border mt-2 mb-3" style="max-width: 25rem; height: 85%">
-                    <p class="text-muted ms-2 mt-3" style=""> Step 1/1</p>
-                    <div class="card-header bg-transparent border-success " style="font-weight: bold;">Query submission</div>
-                    <div class="card-body text-black">
-                       <h5 class="card-title">Ask your query*</h5>
-                      <p class="card-text text-muted">You can also edit this once payment is done</p>
-                      <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query" required></textarea>
-
-
-
-                      <h5 class="card-title mt-3">Attach file</h5>
-                      <p class="card-text text-muted">Accepted file types are pdf, doc. It should not be more than 50 MB.</p>
-                      <!-- <form action="" [(ngModel)]="querymessage">
-                      <textarea class="form-control p-4 " [value]="" id="validationTextarea" placeholder="Click here to upload File" required> </textarea>
-                      </form> -->
-                      <div class="upload-container border p-3 text-center">
-                        <input type="file" id="file-upload" class="upload-input" (change)="onFileSelected($event)">
-
-                        <label for="file-upload" class="upload-label">
-                        <i class="fa-solid fa-cloud-arrow-up"></i>
-                          <p class="upload-text">Click here to upload File</p>
-                        </label>
-
-                        <!-- <p class="upload-note">Accepted file types are pdf, doc. It should not be more than 50 MB.</p>
-                         -->
-                        <!-- <div *ngIf="selectedFile">
-                          <p>Selected file: {{ selectedFile }}</p>
-                        </div> -->
-                      </div>
-                    </div>
-
-                        <button class="btn btn-primary btn-block mt- p-2" >Send</button>
-                    </div>
-
-                </div>
             </div>
-
-
-
-    </div>
 
 
