--- a/src/app/modules/developer/Components/profile-side-bar/profile-side-bar.component.html
+++ b/src/app/modules/developer/Components/profile-side-bar/profile-side-bar.component.html
@@ -1,32 +1,86 @@
 
+<nav class="navbar navbar-expand-md shadow  mb-4 mb-lg-0 sidenav">
 
+  <a class="d-xl-none d-lg-none d-md-none text-inherit fw-bold" href="#">Menu</a>
 
+  <button class="navbar-toggler d-md-none icon-shape icon-sm rounded bg-primary text-light" type="button"
+    data-bs-toggle="collapse" data-bs-target="#sidenav" aria-controls="sidenav" aria-expanded="false"
+    aria-label="Toggle navigation">
+    <span class="fe fe-menu"></span>
+  </button>
 
+  <div class="collapse navbar-collapse" id="sidenav" style="box-shadow: 50px !important; ">
+    <div class="navbar-nav flex-column">
+      <span class="navbar-header fw-bold">Questions</span>
+      <ul class="list-unstyled ms-n2 mb-4">
 
-<nav class="sidebar">
-  <div class="profile-section">
-    <img [src]="profile.imageUrl" alt="Profile Image" class="profile-image" />
-    <h3>{{ profile.name }}</h3>
-    <p>{{ profile.email }}</p>
-    <div class="progress-bar-wrapper">
-      <div class="progress-bar">
-        <div class="progress" [style.width.%]="profile.profileCompletion"></div>
-      </div>
-      <span class="progress-percentage">{{ profile.profileCompletion }}%</span>
+        <li class="nav-item active">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-file-circle-question"></i>
+            My queres
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-rotate-left"></i>
+            My Quiz Attempt
+          </a>
+        </li>
+      </ul>
+
+      <span class="navbar-header fw-bold">Account Settings</span>
+      <ul class="list-unstyled ms-n2 mb-0">
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-pen-to-square"></i>
+            Edit Profile
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-lock"></i>
+            Security
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-user"></i>
+            Social Profiles
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-bell"></i>
+            Notifications
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-user-lock"></i>
+            Profile Privacy
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-trash-can"></i>
+            Delete Profile
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            Sign Out
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
-
-  <ul>
-    <li *ngFor="let item of menuItems">
-      <a [routerLink]="item.path" routerLinkActive="active">
-        <i [class]="item.icon"></i> {{ item.label }}
-      </a>
-    </li>
-    <div class="logout-section">
-      <button class="logout-button" (click)="logout()">
-        <i [class]="logoutItem.icon"></i> {{ logoutItem.label }}
-      </button>
-    </div>
-  </ul>
 </nav>
-
